dist_man1_MANS=

if BUILD_CYPHERD
  dist_man1_MANS+=cypherd.1
endif

if ENABLE_QT
  dist_man1_MANS+=cypher-qt.1
endif

if BUILD_CYPHER_CLI
  dist_man1_MANS+=cypher-cli.1
endif

if BUILD_CYPHER_TX
  dist_man1_MANS+=cypher-tx.1
endif

if ENABLE_WALLET
if BUILD_CYPHER_WALLET
  dist_man1_MANS+=cypher-wallet.1
endif
endif
